  and multi geometry

* Feature Enhancement "hli" added support for southern hemisphere

* Added function "background" for generating background point samples often used in SDM's 

* Added function "cross.tab" cross tabulation of two nominal rasters

* Added function "extract.vertices" for extracting (x,y) vertices coordinates from
  polygons and lines 

* Added function "geo.buffer" that buffers data in geographic projection 
  
* Added function "insert" that inserts a row or column into a data.frame

* Added function "is.empty" method that evaluates if a vector is empty

* Added function "is.whole" method that evaluates if a numeric vector is whole or float

spatialEco_1.3-3
=================
* Added function "built.index" remote sensing built-up index

* Added function "chae" Canine-Human Age Equivalent (for fun)

* Added function "dahi" Diurnal Anisotropic Heat Index

* Added function "impute.loess" for imputing NA's or smoothing data

* Added function "max_extent" returns polygon representing maximum extent 
                  of defined rasters

* Added function "quadrats" for quadrat sampling or analysis

* Added function "rotate.polygon" rotates a polygon by specified angle 
                 (also used by quadrats function)

* Bug fix "smooth.time.series" was not accepting smoothing parameter 
          (thanks to Eileen Perry)

spatialEco_1.3-4
=================
* Added function "rasterDistance" for calculating fast point to raster distances

* Bug fix in print method for crossCorrelation function 

spatialEco_1.3-5
=================
* Fixed bug in crossCorrelation print method

spatialEco_1.3-6
=================
* Addressed changes to spatstat package dependencies

spatialEco_1.3-7
=================
* Added function "polygon_extract" for a fast method for extracting raster values to polygons  

* Added function "time.to.event" returning the time (sum to position) to a specified value 

* Added function "cgls_urls" for returning download URL from CGLS query