@@ -2,7 +2,7 @@ Package: spatialEco
 Type: Package
 Title: Spatial Analysis and Modelling Utilities
 Version: 1.3-7
-Date: 2021-04-28
+Date: 2021-05-12
 Authors@R: c(
   person(family="Evans", given="Jeffrey S.", email = "jeffrey_evans@tnc.org", role = c("aut", "cre")),
   person(family="Murphy", given="Melanie A.", role = "ctb"),			 
